Wy shop with us seciton mobile css fix

--- a/src/components/homepage-components/WhyShopWithUs.css
+++ b/src/components/homepage-components/WhyShopWithUs.css
@@ -50,6 +50,10 @@
 }
 
 @media (width <= 640px) {
+  .WSWU-h2 {
+    font-size: var(--mainheading-29);
+  }
+  
   .WSWU-card {
     flex: 0 0 calc(100% - 20px);
   }
